hotfix 4.0.2: fix overflow in timer control

--- a/client/src/features/control/PlaybackControl.module.scss
+++ b/client/src/features/control/PlaybackControl.module.scss
@@ -97,6 +97,10 @@
   grid-area: fin;
 }
 
+.roll {
+  grid-area: 2 / 2 / 2 / 4 ;
+}
+
 .time {
   color: #ccc;
   font-size: 1.1em;
